--- a/Portafolio/html/index.html
+++ b/Portafolio/html/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>index</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    
+    <header class="container">
+        <p>{</p>
+        <div class="links">
+            <a href="#">Inicio</a>
+            <a href="#">Proyectos</a>
+            <a href="#">Contacto</a>
+        </div>
+    </header>
+    <main class="main">
+        <section class="presentacion">
+            <div class="na">
+                <p class="nombre">Hola, me llamo</p>
+            </div>
+            <div class="flecha"></div>
+            <h1>HAROLD SABOGAL</h1>
+            <p>Back-End Developer</p>
+            <div class="btn">
+                <button class="btn-curriculum">
+                    <picture>
+                        <img src="../img/download.svg" alt="download" width="23">
+                    </picture>
+                    <p>Curriculum</p>
+                </button>
+                <button class="btn-proyectos">
+                    <p>Proyectos</p>
+                </button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
