--- a/Portafolio/html/index.html
+++ b/Portafolio/html/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/logos/github.svg" type="image/x-icon">
 </head>
 <body>
     <header class="container">
         <p>{</p>
         <div class="links">
-            <a href="#">Inicio</a>
-            <a href="#">Proyectos</a>
-            <a href="#">Contacto</a>
+            <a class="inicio" href="./index.html">Inicio</a>
+            <a class="proyectos" href="./proyectos.html">Proyectos</a>
+            <a class="contacto" href="./contacto.html">Contacto</a>
         </div>
     </header>
     <main class="main">
@@ -21,20 +22,74 @@
                 <p class="nombre">Hola, me llamo</p>
             </div>
             <div class="flecha"></div>
-            <h1>HAROLD SABOGAL</h1>
-            <p>Back-End Developer</p>
+            <h1 class="name ">HAROLD SABOGAL</h1>
+            <p class="parrafo">Back-End Developer</p>
             <div class="btn">
-                <button class="btn-curriculum">
-                    <picture>
-                        <img src="../img/download.svg" alt="download" width="23">
-                    </picture>
-                    <p>Curriculum</p>
-                </button>
-                <button class="btn-proyectos">
-                    <p>Proyectos</p>
-                </button>
+                <a href="#">
+                    <button class="btn-curriculum">
+                        <picture>
+                            <img src="../img/download.svg" alt="download" width="23">
+                        </picture>
+                        <p>Curriculum</p>
+                    </button>
+                </a>
+                <a href="./proyectos.html">
+                    <button class="btn-proyectos">
+                        <p>Proyectos</p>
+                    </button>
+                </a>
             </div>
         </section>
     </main>
+    <main class="about-me">
+        <section class="about_me_section">
+            <p>
+                Hola, me llamo 
+                <span class="color">Harold Sabogal,</span>
+                <span>un apasionado desarrollador con una fascinación inagotable por el mundo del código y la creación digital. Desde que
+                comencé mi viaje en el desarrollo hace 1 año, he estado inmerso en el emocionante proceso de transformar ideas en
+                soluciones tecnológicas.</span>
+            </p>
+        </section>
+        <section class="about_me_section about_me_section-2">
+            <p>
+                Mi enfoque abarca la construcción de lógica compleja y robusta en el
+                <span class="color">back-end.<span>
+                <span>Me encanta trabajar en proyectos desafiantes que me permitan poner en práctica mis habilidades y aprender nuevas
+                tecnologías.</span>
+            </p>
+        </section>
+        <section class="logos">
+            <section class="izquierda">
+                <div class="python logo">
+                    <img src="../img/logos/python.svg" alt="python" width="20px">
+                    <p>Python</p>
+                </div>
+                <div class="mysql logo">
+                    <img src="../img/logos/mysql.svg" alt="mysql" width="20px">
+                    <p>MySQL</p>
+                </div>
+                <div class="github logo">
+                    <img src="../img/logos/github.svg" alt="github" width="20px">
+                    <p>GitHub</p>
+                    </div>
+                </div>
+            </section>
+            <section class="derecha">
+                <div class="git logo">
+                    <img src="../img/logos/git.svg" alt="git" width="20px">
+                    <p>Git</p>
+                </div>
+                <div class="mysql logo">
+                    <img src="../img/logos/visualstudiocode.svg" alt="vs-code" width="20px">
+                    <p>Visual Studio Code</p>
+                </div>
+                </div>
+            </section>
+        </section>
+    </main>
+    <footer class="pie">
+        <p>}</p>
+    </footer>
 </body>
 </html>
