--- a/Portafolio/html/contacto.html
+++ b/Portafolio/html/contacto.html
@@ -45,16 +45,16 @@
             </form>
         </section>
         <aside class="logos">
-            <a href="" class="instagram logo">
+            <a href="https://www.instagram.com/dst3v3n/" class="instagram logo">
                 <img src="../img/redes/instagram.svg" alt="instagram" width=30">
             </a>   
-            <a href="" class="github logo">
+            <a href="https://github.com/dst3v3n" class="github logo">
                 <img src="../img/redes/github.svg" alt="github" width=30">
             </a>
-            <a href="" class="twitter logo">
+            <a href="#" class="linkedin logo">
                 <img src="../img/redes/linkedin.svg" alt="linkedin" width=30">
             </a>
-            <a href="" class="linkedin logo">
+            <a href="https://x.com/dst3v3n_?t=-i80KrRNkCNvgtq3f3YVPA&s=08" class="twitter logo">
                 <img src="../img/redes/twitter.svg" alt="twitter" width=30">
             </a>
         </aside>
